--- a/mlcenitex/styles.css
+++ b/mlcenitex/styles.css
@@ -6,8 +6,8 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
-    color: #FFFFFF;
-    background-color: #1F232C;
+    color: #E0E1DD;
+    background-color: #0D1B2A;
     max-width: 88%;
     margin: auto;
     overflow: hidden;
@@ -36,13 +36,13 @@ a:visited,
 a:hover,
 a:active {
     font-weight: bold;
-    color: #FFFFFF;
+    color: #E0E1DD;
     text-decoration: none;
 }
 
 a:hover,
 a:active {
-    color: #476D76;
+    color: #415A77;
 }
 
 h1,
@@ -147,27 +147,27 @@ section {
     margin-left: 10px;
     border-radius: 5px;
     border: none;
-    background-color: #476D76;
-    color: #FFFFFF;
+    background-color: #415A77;
+    color: #E0E1DD;
     padding: 5px 10px;
     cursor: pointer;
 }
 
 .chat-input button:hover {
-    background-color: #04182D;
-    color: #FFFFFF;
+    background-color: #1B263B;
+    color: #E0E1DD;
 }
 
 .userMessage {
     text-align: left;
     max-width: 80%;
-    border: 1px solid #04182D;
+    border: 1px solid #1B263B;
     box-shadow: 0 0 8px rgba(0, 0, 0, .3);
     padding: 5px 10px;
     border-radius: 5px;
     box-sizing: border-box;
-    background-color: #04182D;
-    color: #FFFFFF;
+    background-color: #1B263B;
+    color: #E0E1DD;
     margin-bottom: 10px;
     margin-left: auto;
 }
@@ -175,7 +175,7 @@ section {
 .thinkingMessage {
     text-align: left;
     max-width: 80%;
-    color: #FFFFFF;
+    color: #E0E1DD;
     margin-bottom: 10px;
     margin-left: 0%;
     margin-right: auto;
@@ -185,7 +185,7 @@ section {
 .aiResponseMessage {
     text-align: left;
     max-width: 80%;
-    color: #FFFFFF;
+    color: #E0E1DD;
     margin-bottom: 10px;
     margin-left: 0%;
     margin-right: auto;
