--- a/mlcenitex/styles.css
+++ b/mlcenitex/styles.css
@@ -1,4 +1,3 @@
-/* Global Styles */
 :root {
     --doc-height: 100%
 }
@@ -7,7 +6,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
     color: #E0E1DD;
-    background-color: #0D1B2A;
+    background-color: #1B263B;
     max-width: 88%;
     margin: auto;
     overflow: hidden;
@@ -83,7 +82,6 @@ select {
     width: 20%;
 }
 
-/* Layout Styles */
 header,
 footer {
     text-align: center;
@@ -108,7 +106,15 @@ section {
     margin: auto 2em 2em 1em;
 }
 
-/* Chat Styles */
+.kblinks {
+    list-style-type: none;
+    padding: 0;
+}
+
+.kblinks li {
+    margin-bottom: 6px;
+}
+
 .chat-selection {
     margin: auto;
     width: 90%;
