--- a/mlcenitex/styles.css
+++ b/mlcenitex/styles.css
@@ -99,7 +99,13 @@ section {
     width: 80%;
     border-radius: 24px;
     padding: 0 32px 32px;
-    height: 70vh;
+    height: 65vh;
+}
+
+@media (max-width: 600px) {
+    .chat-selection {
+        height: 60vh;
+    }
 }
 
 .chat-window {
