--- a/mlcenitex/styles.css
+++ b/mlcenitex/styles.css
@@ -1,6 +1,8 @@
 :root {
     --doc-height: 100%;
     --font: 12px "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+    /* Colors */
     --bg: #1b263b;
     --text: #e0e1dd;
     --link: #415a77;
@@ -9,7 +11,6 @@
 }
 
 /* Typography */
-
 body {
     font: var(--font);
     color: var(--text);
@@ -20,10 +21,14 @@ body {
     height: var(--doc-height);
 }
 
-h1 {
-    font-size: 1.5rem;
+h1,
+h2 {
     letter-spacing: 0.6em;
     padding: 0.5em 0;
+}
+
+h1 {
+    font-size: 1.5rem;
 }
 
 @media (max-width: 600px) {
@@ -38,7 +43,7 @@ h2 {
 }
 
 p {
-    margin: 0.2em auto 0.2em 0;
+    margin: 0.2em 0;
     color: #a7a7a7;
 }
 
@@ -54,7 +59,6 @@ a:active {
 }
 
 /* Layout */
-
 header,
 footer {
     text-align: center;
@@ -66,12 +70,12 @@ header {
 }
 
 main {
-    display: grid;
     margin-top: 1.5em;
 }
 
 @media (min-width: 150vh) {
     main {
+        display: grid;
         grid-template-columns: 17% 83%;
     }
 }
@@ -99,7 +103,6 @@ section {
 }
 
 /* Chat */
-
 .chat-selection {
     margin: auto;
     width: 80%;
@@ -166,9 +169,15 @@ section {
     color: var(--text);
 }
 
-.userMessage {
+.userMessage,
+.thinkingMessage,
+.aiResponseMessage {
     text-align: left;
     max-width: 80%;
+    margin-bottom: 20px;
+}
+
+.userMessage {
     border: var(--border);
     box-shadow: var(--shadow);
     padding: 5px 10px;
@@ -176,23 +185,18 @@ section {
     box-sizing: border-box;
     background: var(--bg);
     color: var(--text);
-    margin-bottom: 20px;
     margin-left: auto;
 }
 
 .thinkingMessage,
 .aiResponseMessage {
-    text-align: left;
-    max-width: 80%;
     color: var(--text);
-    margin-bottom: 20px;
     margin-left: 0;
     margin-right: auto;
     font-weight: bold;
 }
 
 /* Misc */
-
 hr {
     border: none;
     background: lightgray;
@@ -218,7 +222,8 @@ select {
     margin-bottom: 6px;
 }
 
-video {
+video,
+.content {
     position: fixed;
     right: 0;
     bottom: 0;
@@ -227,10 +232,5 @@ video {
 }
 
 .content {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
     background: rgba(0, 0, 0, .5);
 }
