--- a/mlcenitex/styles.css
+++ b/mlcenitex/styles.css
@@ -1,6 +1,6 @@
 :root {
     --doc-height: 100%;
-    --font: 12px "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    --font: 12px 'Open Sans', sans-serif;
 
     /* Colors */
     --bg: #1b263b;
@@ -215,11 +215,29 @@ select {
 
 .kblinks {
     list-style-type: none;
-    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .kblinks li {
-    margin-bottom: 6px;
+    margin: 1.0px 0;
+}
+
+.kblinks a {
+    display: flex;
+    align-items: left;
+    padding: 3px 3px;
+    border-radius: 5px;
+    transition: 0.2s;
+}
+
+.kblinks a:hover {
+    background: #ddd;
+}
+
+.kblinks i {
+    width: 15px;
+    color: var(--link);
 }
 
 video,
