--- a/mlcenitex/styles.css
+++ b/mlcenitex/styles.css
@@ -121,28 +121,40 @@ section {
 
 .chat-input {
     display: flex;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .chat-input input[type="text"] {
     flex-grow: 1;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding: 5px 10px;
+    border-radius: 15px;
+    border: none;
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: var(--shadow);
+    color: #fff;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.chat-input input[type="text"]:focus {
+    outline: none;
+    border: none;
 }
 
 .chat-input button {
     margin-left: 10px;
-    border-radius: 5px;
+    border-radius: 15px;
     border: none;
-    background: var(--link);
+    background: linear-gradient(rgba(65, 90, 119, 0.8), var(--bg));
+    box-shadow: var(--shadow);
     color: var(--text);
-    padding: 5px 10px;
+    padding: 10px 20px;
     cursor: pointer;
+    transition: background 0.3s ease;
 }
 
 .chat-input button:hover {
-    background: var(--bg);
+    background: linear-gradient(rgba(65, 90, 119, 1.0), var(--bg));
     color: var(--text);
 }
 
@@ -162,7 +174,7 @@ section {
     padding: 12px 12px;
     border-radius: 20px 20px 0 20px;
     box-sizing: border-box;
-    background: linear-gradient(rgba(65, 90, 119, 0), var(--bg));
+    background: linear-gradient(rgba(65, 90, 119, 0.1), var(--bg));
     margin-left: auto;
     margin-right: 0;
 }
@@ -179,8 +191,7 @@ i {
     margin-right: 0.5em;
 }
 
-input,
-select {
+input {
     text-align: left;
     width: 20%;
 }
@@ -189,6 +200,7 @@ select {
     list-style-type: none;
     display: flex;
     flex-direction: column;
+    opacity: 0.8;
 }
 
 .kblinks li {
@@ -199,9 +211,9 @@ select {
     display: flex;
     align-items: left;
     padding: 3px 3px;
-    border-radius: 5px;
-    transition: 0.2s;
-    text-shadow: 0 0 10px rgba(65, 90, 119, 0.8);
+    border-radius: 15px;
+    transition: 0.3s;
+    text-shadow: 0 0 10px rgba(65, 90, 119, 0.1);
     background-size: 400% 400%;
     animation: gradientBG 5s ease infinite;
 }
@@ -221,7 +233,6 @@ select {
 }
 
 .kblinks i {
-    color: #e0e1dd;
     text-shadow: 0 0 10px #415a77;
     width: 15px;
     color: var(--link);
@@ -229,8 +240,9 @@ select {
 
 .kblinks a:hover {
     transform: translateY(-2px);
-    transition: 0.2s;
-    background: rgba(221, 221, 221, 0.8);
+    transition: 0.3s;
+    background: rgba(225, 225, 255, 0.2);
+    color: var(--text);
 }
 
 video,
