--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -84,6 +84,12 @@ textarea {
     padding: 12px;
 }
 
+textarea.resizable-textarea {
+    resize: vertical;
+    overflow-y: hidden;
+    width: 95%;
+}
+
 input[type="text"] {
     margin-bottom: 20px;
     width: 95%;
