--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -1,121 +1,60 @@
-:root {
-    --primary: #444;
-    --secondary: #444;
-    --font: 12px 'Poppins', sans-serif;
-    --padding: 30px;
-    --border-radius: 10px;
-    --box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-
-    /* Extracted common font variables */
-    --base-font-family: 'Poppins', sans-serif;
-    --subtitle-font: var(--base-font-family);
-    --subtitle-size: 0.8rem;
-}
-
-/* Global styles */
 body {
-    background: linear-gradient(#f8f4f4, #f2f2f2);
-    font: var(--font);
-}
-
-h1,
-h2,
-h3,
-p,
-label {
-    font-family: var(--base-font-family);
-}
-
-/* Typography */
-h1 {
-    color: var(--primary);
-    font-size: 2em;
-    letter-spacing: 0.6em;
-    margin: auto 2em;
-    padding: 0.5em 0;
-    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    background-color: #f5f5f5;
+    color: #333;
+    margin: 0;
+    padding: 0;
 }
 
 h2 {
-    text-align: center;
-}
-
-label,
-h3 {
-    font-size: var(--subtitle-size);
-}
-
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.subtitle {
-    align-self: center;
-}
-
-/* Layout */
-.container {
-    align-items: flex-start;
-    display: flex;
-    gap: 40px;
-    padding: 40px;
-    width: 90%;
-}
-
-.input,
-.report {
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: var(--border-radius);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
-    padding: var(--padding);
-    width: 45%;
-}
-
-/* Form */
-input,
-textarea {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid #ccc;
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    font-family: var(--base-font-family);
-    padding: 12px;
-}
-
-textarea.resizable-textarea {
-    resize: vertical;
-    overflow-y: hidden;
-    width: 95%;
-}
-
-input[type="text"] {
-    margin-bottom: 20px;
-    width: 95%;
-}
-
-textarea {
-    outline: #444;
-    resize: none;
-    width: 95%;
-}
-
-label {
-    display: block;
-    font-weight: 500;
+    font-size: 24px;
+    margin-top: 30px;
     margin-bottom: 10px;
+    color: #007bff;
 }
 
-/* Theme */
-h2,
-h3 {
-    color: var(--secondary);
-    margin-bottom: 20px;
+.container {
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.9);
+    padding: 40px;
+    border-radius: 10px;
+    margin: 20px auto;
+    max-width: 800px;
 }
 
-input[type="checkbox"] {
-    margin-right: 10px;
+input[type="text"], select, textarea {
+    width: 100%;
+    padding: 15px;
+    margin: 10px 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size: 15px;
+}
+
+input[type="range"] {
+    width: calc(100% - 30px);
+    margin-top: 20px;
+}
+
+textarea {
+    height: 150px;
+    resize: vertical;
+}
+
+.slider-label {
+    margin-top: 20px;
+    font-size: 18px;
+}
+
+.slider-value {
+    font-size: 16px;
+    color: #007bff;
+    font-weight: bold;
+}
+
+.checkboxes {
+    margin-top: 10px;
 }
 
 #video {
@@ -125,51 +64,4 @@ input[type="checkbox"] {
     position: fixed;
     right: 0;
     z-index: -1;
-}
-
-p {
-    margin-bottom: 20px;
-}
-
-#englishBrushButton,
-#mathBrushButton,
-#scienceBrushButton,
-#historyBrushButton {
-    border-radius: 15px;
-    border: none;
-    background: linear-gradient(rgba(65, 90, 119, 0.8), var(--bg));
-    box-shadow: var(--box-shadow);
-    color: var(--text);
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background 0.3s ease, transform 0.3s ease;
-    margin-top: 10px;
-}
-
-#englishBrushButton:hover,
-#mathBrushButton:hover,
-#scienceBrushButton:hover,
-#historyBrushButton:hover {
-    background: linear-gradient(rgba(65, 90, 119, 1.0), var(--bg));
-    color: var(--text);
-    transform: scale(1.05);
-}
-
-/* Media queries */
-@media (max-width: 768px) {
-
-    .container {
-        align-items: center;
-        flex-direction: column;
-    }
-
-    #video {
-        min-height: 50%;
-    }
-
-    .input,
-    .report {
-        width: 90%;
-    }
-
 }
