--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -6,6 +6,8 @@ body {
     justify-content: center;
     text-align: center;
     height: 100vh;
+    background-color: #1ab0fa;
+    color: white;
 }
 
 .video-container {
@@ -25,10 +27,10 @@ body {
 }
 
 .container {
-    background-color: rgba(255, 255, 255, 0.5);
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 206, 88, 0.1);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.9);
     padding: 40px;
-    border-radius: 10px;
+    border-radius: 30px;
     width: 80%;
     max-width: 400px;
     margin: 0 auto;
@@ -37,10 +39,10 @@ body {
 h1 {
     font-size: 28px;
     margin-bottom: 20px;
-    color: #007bff;
+    color: #1ab0fa;
 }
 
-.form-section {
+form {
     margin-bottom: 20px;
 }
 
@@ -54,11 +56,11 @@ label {
 
 input[type="text"],
 select {
-    width: 100%;
+    width: calc(100% - 24px);
     padding: 12px;
     margin-bottom: 20px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
+    border: 1px solid #333;
     border-radius: 5px;
     font-size: 16px;
 }
@@ -75,7 +77,7 @@ select {
 
 .slider-value {
     font-size: 16px;
-    color: #007bff;
+    color: #1ab0fa;
     font-weight: bold;
 }
 
@@ -90,17 +92,21 @@ select {
     margin-bottom: 20px;
 }
 
+.checkbox-section input[type="checkbox"] {
+    margin-right: 10px;
+}
+
 .checkbox-section input[type="range"] {
     width: 100%;
 }
 
 .comment-box {
-    width: 100%;
+    width: calc(100% - 24px);
     height: 100px;
     padding: 12px;
     margin-bottom: 10px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
+    border: 1px solid #333;
     border-radius: 5px;
     font-size: 16px;
     resize: vertical;
@@ -112,7 +118,7 @@ select {
 }
 
 button {
-    background-color: #007bff;
+    background-color: #ff427a;
     color: white;
     border: none;
     padding: 14px 24px;
@@ -123,5 +129,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #d11a5b;
 }
