--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -30,7 +30,7 @@ body {
     background-color: rgba(255, 206, 88, 0.1);
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.9);
     padding: 40px;
-    border-radius: 30px;
+    border-radius: 50px;
     width: 80%;
     max-width: 400px;
     margin: 0 auto;
@@ -41,6 +41,7 @@ h1 {
     margin-bottom: 20px;
     color: #1ab0fa;
 }
+
 
 form {
     margin-bottom: 20px;
@@ -117,17 +118,20 @@ select {
     color: #555;
 }
 
+
 button {
-    background-color: #ff427a;
-    color: white;
-    border: none;
+    background-color: rgba(255, 66, 122, 0.8);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+    color: var(--text);
     padding: 14px 24px;
     font-size: 18px;
     cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+    border: none;
+    border-radius: 15px;
+    transition: background 0.3s ease, transform 0.3s ease;
 }
 
 button:hover {
     background-color: #d11a5b;
+    transform: scale(1.05);
 }
