--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -6,6 +6,8 @@ body {
     justify-content: center;
     text-align: center;
     height: 100vh;
+    background-color: #1ab0fa;
+    color: white;
 }
 
 .video-container {
@@ -25,22 +27,25 @@ body {
 }
 
 .container {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 206, 88, 0.4);
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
     padding: 40px;
-    border-radius: 10px;
-    width: 80%;
-    max-width: 400px;
-    margin: 0 auto;
+    border-radius: 50px;
+    width: 70%;
+    max-width: 1000px;
+    margin-top: 40px !important;
+    margin-bottom: 40px !important;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1 {
     font-size: 28px;
     margin-bottom: 20px;
-    color: #007bff;
+    color: #0c7bbf;
 }
 
-.form-section {
+form {
     margin-bottom: 20px;
 }
 
@@ -54,56 +59,99 @@ label {
 
 input[type="text"],
 select {
-    width: 100%;
+    width: calc(100% - 24px);
     padding: 12px;
     margin-bottom: 20px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
+    border: 1px solid #333;
     border-radius: 5px;
     font-size: 16px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .slider-section {
     margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.slider-container {
+    width: 45%;
+    margin-bottom: 20px;
+}
+
+.slider-container input[type="range"] {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 8px;
+    border-radius: 10px;
+    background: #ccc;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+}
+
+.slider-container input[type="range"]:hover {
+    opacity: 1;
+}
+
+.slider-container input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #1ab0fa;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.slider-container input[type="range"]::-webkit-slider-thumb:hover {
+    background: #0c7bbf;
 }
 
 .slider-label {
-    font-size: 18px;
+    font-size: 16px;
     color: #333;
-    margin-bottom: 10px;
+
 }
 
 .slider-value {
-    font-size: 16px;
-    color: #007bff;
+    font-size: 15px;
+    color: #ffffff;
     font-weight: bold;
-}
-
-.slider-section input[type="range"] {
-    width: 100%;
 }
 
 .checkbox-group {
     display: flex;
-    flex-direction: column;
-    text-align: left;
+    justify-content: space-between;
     margin-bottom: 20px;
 }
 
-.checkbox-section input[type="range"] {
-    width: 100%;
+.checkbox-group-item {
+    width: 45%;
+    text-align: left;
+}
+
+.checkboxes {
+    display: inline-block;
+}
+
+.checkboxes input[type="checkbox"] {
+    margin-right: 10px;
 }
 
 .comment-box {
-    width: 100%;
-    height: 100px;
+    width: calc(100% - 24px);
+    height: 380px;
     padding: 12px;
     margin-bottom: 10px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
+    border: 1px solid #333;
     border-radius: 5px;
     font-size: 16px;
     resize: vertical;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .character-count {
@@ -112,16 +160,22 @@ select {
 }
 
 button {
-    background-color: #007bff;
-    color: white;
-    border: none;
+    background-color: rgba(255, 66, 122, 0.8);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+    color: var(--text);
     padding: 14px 24px;
     font-size: 18px;
     cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+    border: none;
+    border-radius: 15px;
+    transition: background 0.3s ease, transform 0.3s ease;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #d11a5b;
+    transform: scale(1.05);
 }
