--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -42,8 +42,8 @@ body {
     border-radius: 50px;
     width: 70%;
     max-width: 1000px;
-    margin-top: 40px !important;
-    margin-bottom: 40px !important;
+    margin-top: 30px;
+    margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
 }
