--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -1,11 +1,3 @@
-@font-face {
-    font-family: 'Pangea';
-    src: url('path/to/pangea-font.woff2') format('woff2'), /* Modern Browsers */
-         url('path/to/pangea-font.woff') format('woff'); /* Legacy Browsers */
-    font-weight: normal;
-    font-style: normal;
-}
-
 body {
     font-family: 'Pangea', sans-serif;
     font-size: 14px;
@@ -48,10 +40,20 @@ body {
     margin-right: auto;
 }
 
+.logo {
+    width: 50px;
+    height: 30px;
+    margin-right: 12px;
+}
+
 h1 {
+    display: flex;
+    align-items: center;
     font-size: 24px;
+    margin-top: 10px;
     margin-bottom: 20px;
     color: #0c7bbf;
+    justify-content: center;
 }
 
 form {
@@ -184,7 +186,12 @@ button {
     margin-right: 10px;
 }
 
+#brushBtn {
+    padding: 0.9rem;
+    border-radius: 50%;
+}
+
 button:hover {
     background-color: #d11a5b;
-    transform: scale(1.05);
+    transform: scale(1.03);
 }
