--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -40,10 +40,16 @@ body {
     margin-right: auto;
 }
 
-.logo {
-    width: 30px;
-    height: 30px;
+.h1logo {
+    width: 35px;
+    height: 35px;
     margin-right: 20px;
+}
+
+.h2logo {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
 }
 
 h1 {
@@ -54,6 +60,15 @@ h1 {
     margin-bottom: 20px;
     color: #0c7bbf;
     justify-content: center;
+}
+
+h2 {
+    display: flex;
+    align-items: left;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    color: #ffffff;
 }
 
 form {
