--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -7,8 +7,8 @@ body {
     justify-content: center;
     text-align: center;
     height: 100vh;
-    background-color: #1ab0fa;
-    color: white;
+    background: linear-gradient(to bottom right, #79C7C5 40%, #F9FBFF 100%);
+    color: #f1d7f1;
 }
 
 .video-container {
@@ -28,14 +28,14 @@ body {
 }
 
 .container {
-    background-color: rgba(255, 206, 88, 0.4);
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.9);
     padding: 40px;
-    border-radius: 50px;
-    width: 70%;
+    border-radius: 30px;
+    width: 80%;
     max-width: 1000px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -58,7 +58,7 @@ h1 {
     font-size: 24px;
     margin-top: 10px;
     margin-bottom: 20px;
-    color: #0c7bbf;
+    color: #f1d7f1;
     justify-content: center;
 }
 
@@ -68,7 +68,7 @@ h2 {
     font-size: 20px;
     margin-top: 10px;
     margin-bottom: 20px;
-    color: #ffffff;
+    color: #f1d7f1;
 }
 
 form {
@@ -78,7 +78,7 @@ form {
 label {
     display: block;
     font-size: 14px;
-    color: #333;
+    color: #f1d7f1;
     margin-bottom: 8px;
     text-align: left;
 }
@@ -127,7 +127,7 @@ select {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #1ab0fa;
+    background: #00a2f9;
     cursor: pointer;
     transition: background 0.3s ease;
 }
@@ -138,13 +138,13 @@ select {
 
 .slider-label {
     font-size: 14px;
-    color: #333;
+    color: #f1d7f1;
 
 }
 
 .slider-value {
     font-size: 14px;
-    color: #ffffff;
+    color: #f1d7f1;
     font-weight: bold;
 }
 
@@ -163,8 +163,14 @@ select {
     display: inline-block;
 }
 
+.checkbox-label {
+    display: flex;
+    align-items: center;
+}
+
 .checkboxes input[type="checkbox"] {
     margin-right: 10px;
+    margin-bottom: 0;
 }
 
 .comment-box {
@@ -186,8 +192,7 @@ select {
 }
 
 button {
-    background-color: rgba(255, 66, 122, 0.8);
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(to bottom left, rgba(0, 162, 249, 0.7) 20%, rgba(67, 241, 155, 0.7) 100%);
     color: var(--text);
     padding: 14px 24px;
     font-size: 16px;
@@ -207,6 +212,6 @@ button {
 }
 
 button:hover {
-    background-color: #d11a5b;
+    background: linear-gradient(to bottom left, rgba(67, 241, 155, 0.7) 20%, rgba(0, 162, 249, 0.7) 100%);
     transform: scale(1.03);
 }
