--- a/mlcenitex/dark.css
+++ b/mlcenitex/dark.css
@@ -27,8 +27,7 @@ body {
     background: rgba(0, 0, 0, 0.8);
     display: flex;
     flex-direction: column;
-    /* height: 100vh; */
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     justify-content: center;
 }
@@ -215,8 +214,7 @@ body {
 }
 
 .video-container {
-    /* height: 100vh; */
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     left: 0;
     overflow: hidden;
