--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -1,6 +1,6 @@
 body {
-    font-family: 'Pangea', sans-serif;
-    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
     margin: 0;
     padding: 0;
     align-items: center;
@@ -28,16 +28,13 @@ body {
 }
 
 .container {
-    background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
     padding: 30px;
     border-radius: 20px;
     width: 75%;
     max-width: 1024px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px auto;
 }
 
 .h1logo {
@@ -75,7 +72,7 @@ form {
     margin-bottom: 20px;
 }
 
-label {
+.label {
     display: block;
     font-size: 14px;
     color: #f1d7f1;
@@ -108,10 +105,10 @@ select {
 
 .slider-container input[type="range"] {
     -webkit-appearance: none;
-    width: 100%;
+    width: 95%;
     height: 8px;
     border-radius: 10px;
-    background: #ccc;
+    background: #eee;
     outline: none;
     opacity: 0.7;
     transition: opacity 0.2s;
@@ -160,17 +157,31 @@ select {
 }
 
 .checkboxes {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
 }
 
 .checkbox-label {
     display: flex;
     align-items: center;
+    margin-bottom: 5px;
 }
 
 .checkboxes input[type="checkbox"] {
     margin-right: 10px;
     margin-bottom: 0;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    border: 5px solid #00a2f9;
+    border-radius: 3px;
+    background-color: white;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+.checkboxes input[type="checkbox"]:checked {
+    background-color: #00a2f9;
 }
 
 .comment-box {
@@ -192,44 +203,23 @@ select {
 }
 
 button {
-    background: linear-gradient(to bottom left, rgba(0, 162, 249, 0.7) 20%, rgba(67, 241, 155, 0.7) 100%);
-    color: var(--text);
+    background: linear-gradient(to bottom left, rgba(0, 162, 249, 0.9) 20%, rgba(67, 241, 155, 0.9) 100%);
+    color: #fff;
     padding: 14px 24px;
     font-size: 16px;
     cursor: pointer;
     border: none;
     border-radius: 15px;
     transition: background 0.3s ease, transform 0.3s ease;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 30px 10px 20px;
+}
+
+button:hover {
+    background: linear-gradient(to bottom left, rgba(67, 241, 155, 0.9) 20%, rgba(0, 162, 249, 0.9) 100%);
+    transform: scale(1.03);
 }
 
 #brushBtn {
     padding: 0.9rem;
     border-radius: 50%;
-}
-
-button:hover {
-    background: linear-gradient(to bottom left, rgba(67, 241, 155, 0.7) 20%, rgba(0, 162, 249, 0.7) 100%);
-    transform: scale(1.03);
-}
-
-body::-webkit-scrollbar {
-    width: 10px;
-}
-
-body::-webkit-scrollbar-track {
-    background: #220e41;
-
-}
-
-body::-webkit-scrollbar-thumb {
-    background: #ca3570;
-    border-radius: 5px;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-    background: #ca3570;
 }
