--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     text-align: center;
     height: 100vh;
-    background: linear-gradient(to bottom right, #79C7C5 40%, #F9FBFF 100%);
+    background: #531168;
     color: #f1d7f1;
 }
 
