--- a/wkls/styles.css
+++ b/wkls/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
+    font-size: 13px;
     margin: 0;
     padding: 0;
     align-items: center;
@@ -64,7 +64,7 @@ h2 {
     align-items: left;
     font-size: 18px;
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #f1d7f1;
 }
 
@@ -134,14 +134,14 @@ select {
 }
 
 .slider-label {
-    font-size: 14px;
     color: #f1d7f1;
+    font-size: 14px;
 
 }
 
 .slider-value {
-    font-size: 14px;
     color: #f1d7f1;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -152,16 +152,13 @@ select {
 }
 
 .checkbox-group-item {
-    flex: 0 0 60%;
     text-align: left;
-}
-
-.checkbox-group-item:last-child {
-    flex: 0 0 40%;
+    width: 100%;
 }
 
 .checkboxes {
     display: flex;
+    margin-left: 5px;
     flex-direction: column;
 }
 
