--- a/mlportfolio/styles.css
+++ b/mlportfolio/styles.css
@@ -63,6 +63,13 @@ section {
   box-shadow: 0px 2px 4px var(--shadow-color);
 }
 
+.section-image {
+  max-width: 80%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
 h2 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
@@ -135,6 +142,9 @@ footer {
   section {
     padding: 0.8rem;
     margin-bottom: 0.5rem;
+  }
+  .section-image {
+    max-width: 100%;
   }
   .video-container {
     width: 100%;
